--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@btrul/weighted-list",
+  "name": "@tbrul/weighted-list",
   "version": "1.0.0",
   "description": "Weighted list implementation, pick random item using probability distribution",
   "main": "main/index.js",
