--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@tbrul/weighted-list",
   "version": "1.0.1",
   "description": "Weighted list implementation, pick random item using probability distribution",
-  "main": "main/index.js",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "type": "module",
   "files": [
     "build"
